--- a/src/app/view/alunos/perfil-aluno/perfil-aluno.component.html
+++ b/src/app/view/alunos/perfil-aluno/perfil-aluno.component.html
@@ -78,7 +78,7 @@
     </div>
     <div class="ui-lg-3">
         <label>Turma:</label>
-        <h6>{{element.turma.codigo}}</h6>
+        <h6>{{element.turma==null?"":element.turma.codigo}}</h6>
     </div>
     <div class="ui-lg-3">
         <label>Situação:</label>
