--- a/src/app/view/alunos/tabela-aluno/table-listar-aluno.component.html
+++ b/src/app/view/alunos/tabela-aluno/table-listar-aluno.component.html
@@ -40,7 +40,7 @@
                 <label>Matrícula:</label>
                 <label>{{alunoDelete.matricula}} </label>
             </div>
-            <div class="ui-g-12">
+            <div *ngIf="alunoDelete.turma != null" class="ui-g-12">
                 <label>Turma:</label>
                 <label>{{alunoDelete.turma.codigo}}</label>
             </div>
