--- a/src/app/view/configuracao/formulario-cadastro-usuario/formulario-cadastro-usuario.component.html
+++ b/src/app/view/configuracao/formulario-cadastro-usuario/formulario-cadastro-usuario.component.html
@@ -1,9 +1,7 @@
 <p-growl [(value)]="msgs"></p-growl>
 
 <p-panel header="Informações Pessoais" 
-        [toggleable]="true" 
-        [style]="{'margin-bottom':'20px', 'width':'100%'}"
-        [collapsed]="false">
+        [style]="{'margin-bottom':'20px', 'width':'100%'}">
     <div class="ui-g form-group">
         <div class="ui-lg-12">
             <label>Nome Completo:</label>
