--- a/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
+++ b/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
@@ -3,7 +3,7 @@
 <p-panel header="Informações Pessoais" 
         [toggleable]="true" 
         [style]="{'margin-bottom':'20px', 'width':'100%'}"
-        [collapsed]="true">
+        [collapsed]="false">
     <div class="ui-g form-group">
         <div class="ui-lg-12">
         <label>Nome Completo:</label>
@@ -288,7 +288,7 @@
                 </div>
         </div>
 </p-panel>
-<p-panel header="Notas" 
+<!-- <p-panel header="Notas" 
         [toggleable]="true" 
         [style]="{'margin-bottom':'20px', 'width':'100%'}"
         [collapsed]="true">
@@ -316,8 +316,8 @@
                         </ng-container>
                 </ng-container>
         </div>
-</p-panel>
-<p-panel header="Observações" 
+</p-panel> -->
+<!-- <p-panel header="Observações" 
         [toggleable]="true" 
         [style]="{'margin-bottom':'20px', 'width':'100%'}"
         [collapsed]="true">
@@ -371,7 +371,7 @@
                 </ng-template>
 
         </table-x>
-</p-panel>
+</p-panel> -->
 <div class="ui-lg-4 ui-md-6" style="float:right">
         <button (click)="cadastrarAluno()" 
                 pButton type="button" 
