--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -94,6 +94,7 @@
             <input type="text" 
                     [(ngModel)]="usuario.login"
                     pInputText 
+                    autofocus="autofocus"
                     maxlength="50"
                     style="width: 100%"/>
         </div>
