--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -423,3 +423,20 @@ p-autocomplete .invalidField {
 tabela-utilidades h3{
   font-family: Roboto-Black;
 }
+
+.menu-perfil{
+  border: 1px solid black;
+  border-radius: 10px;
+  background: var(--escuro);
+  color: var(--gelo);
+  font-family: Roboto;
+  font-size: 1.3em;
+  padding: 0 20px;
+  margin: 20px;
+}
+
+.menu-perfil>div>a:hover{
+  text-decoration: underline!important;
+  color: var(--azulcl)!important;
+  font-weight: bold;
+}
