--- a/src/app/view/professor/formulario-adiciona-professor/formulario-adiciona-professor.component.html
+++ b/src/app/view/professor/formulario-adiciona-professor/formulario-adiciona-professor.component.html
@@ -1,5 +1,3 @@
-<p-growl [(value)]="msgs"></p-growl>
-
 <p-panel header="Informações Pessoais" 
         [toggleable]="false" 
         [style]="{'margin-bottom':'20px', 'width':'100%'}"
@@ -111,3 +109,12 @@
         </div>
     </div>
 </p-panel>
+
+<div class="ui-lg-4 ui-md-6" style="float:right">
+    <button (click)="cadastrarProfessor()" 
+            pButton type="button" 
+            class="form-button"
+            label="Cadastrar"
+            style="height:34px"
+            title="Cadastrar Professor"></button>
+</div>
