--- a/src/app/view/professor/menu-professor.component.html
+++ b/src/app/view/professor/menu-professor.component.html
@@ -1,3 +1,5 @@
+<p-growl [(value)]="msgs"></p-growl>
+
 <div *ngIf="selected['default']" class="ui-lg-4 ui-md-4">
     <p-card [style]="{width: '100%'}" [styleClass]="">
         <h4>Cadastro</h4>
@@ -12,7 +14,7 @@
 </div>
 
 <div *ngIf="selected['formulario']">
-    <formulario-adiciona-professor [loading]="loading" [(element)]=element></formulario-adiciona-professor>
+    <formulario-adiciona-professor [loading]="loading" [(element)]=element (fechar)="exibir('default')"></formulario-adiciona-professor>
 </div>
 <div *ngIf="selected['tabela']">
     <tabela-professor (carregaProfessor)="carregaProfessor($event)"></tabela-professor>
