--- a/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
+++ b/src/app/view/alunos/formulario-adiciona-aluno/formulario-adiciona-aluno.component.html
@@ -187,7 +187,7 @@
                                 </div>
                         </div>
                 </div>
-                <div class="ui-lg-4 ui-md-6">
+                <!-- <div class="ui-lg-4 ui-md-6">
                         <label>Situação:</label>
                         <p-autoComplete [(ngModel)]="element.situacao" 
                                         [suggestions]="situacaoSuggestions" 
@@ -201,7 +201,7 @@
                                         field="label"
                                         [styleClass]="isCampoInvalido('status')?'invalidField':''"
                                         [dropdown]="true"></p-autoComplete>
-                </div>
+                </div> -->
                 <div class="ui-lg-4 ui-md-6">
                         <label>Data de Matrícula:</label>
                         <p-calendar [(ngModel)]="element._dataNascimento" 
